<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/uvwidget_all"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/appwidget_widgetbg1"
        android:layout_width="304dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_widget_blue"
        android:contentDescription="@string/uv_uv" />

    <ImageView
        android:layout_width="304dp"
        android:layout_height="38dp"
        android:layout_below="@+id/appwidget_widgetbg1"
        android:background="@drawable/bg_widget_white"
        android:contentDescription="@string/uv_uv" />

    <ImageView
        android:id="@+id/uvwidgetindexbg"
        android:layout_width="109dp"
        android:layout_height="88dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="1dp"
        android:scaleType="fitXY"
        android:background="@drawable/bg_widget_4x1_1_2"
        android:contentDescription="@string/uv_uv" />

    <TextView
        android:id="@+id/uvwidget_uv"
        android:layout_width="28dp"
        android:layout_height="19dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:shadowColor="#ff505050"
        android:shadowDx="2"
        android:shadowDy="2"
        android:text="@string/uv_uv"
        android:textColor="#ffffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/uvwidget_index"
        android:layout_width="28dp"
        android:layout_height="9dp"
        android:layout_below="@+id/uvwidget_uv"
        android:layout_marginStart="26dp"
        android:layout_marginTop="-2dp"
        android:gravity="center"
        android:shadowColor="#ff505050"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:text="@string/uv_index"
        android:textColor="#ffffffff"
        android:textSize="7sp" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_below="@+id/uvwidget_index"
        android:layout_marginStart="26dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/button_widget_4x1_uv_refresh"
        android:contentDescription="@string/uv_uv" />

    <ImageView
        android:id="@+id/uvwidget_indexnumber"
        android:layout_width="60dp"
        android:layout_height="73dp"
        android:layout_alignEnd="@+id/uvwidgetindexbg"
        android:layout_alignTop="@+id/uvwidgetindexbg"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/uv_uv" />

    <TextView
        android:id="@+id/uvwidget_prompt"
        android:layout_width="132dp"
        android:layout_height="22dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/uvwidgetindexbg"
        android:gravity="start"
        android:text="@string/uv_prompt_1_2"
        android:textColor="#ffffffff"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/uvwidget_prompt_description"
        android:layout_width="132dp"
        android:layout_height="14dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/uvwidgetindexbg"
        android:gravity="start"
        android:text="@string/uv_prompt_description_1_2"
        android:textColor="#ffffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/uvwidget_duration"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="52dp"
        android:layout_toEndOf="@+id/uvwidgetindexbg"
        android:gravity="start"
        android:text="@string/uv_default_zero_time"
        android:textColor="#fff17a9e"
        android:textSize="26sp" />

    <RelativeLayout
        android:layout_width="27dp"
        android:layout_height="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/uvwidget_bgspf"
            android:layout_width="27dp"
            android:layout_height="42dp"
            android:background="@drawable/icon_widget_4x1_sunscreen"
            android:contentDescription="@string/uv_uv" />

        <TextView
            android:id="@+id/uvwidget_spfindex"
            android:layout_width="18dp"
            android:layout_height="16dp"
            android:layout_marginTop="18dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="15"
            android:textColor="#ffffffff"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/uvwidget_paindex"
            android:layout_width="18dp"
            android:layout_height="10dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="++"
            android:textColor="#ffffffff"
            android:textSize="9sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/uvwidget_bgstop"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/button_widget_4x1_stop"
        android:contentDescription="@string/uv_uv" />

    <TextView
        android:id="@+id/uvwidget_stoptext"
        android:layout_width="20dp"
        android:layout_height="8dp"
        android:layout_alignBottom="@+id/uvwidget_bgstop"
        android:layout_alignEnd="@+id/uvwidget_bgstop"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/uv_start_button"
        android:textColor="#ffffffff"
        android:textSize="7sp" />

</RelativeLayout>